<resources>
    <string name="app_name">RecyclerViewKotlin</string>
    <string name="titulo">Pokedex</string>
    <string name="number">Numero: </string>
    <string name="stats">Stats base </string>
    <string name="hp">HP: </string>
    <string name="attack">Attack: </string>
    <string name="defense">Defense: </string>
    <string name="spattack">Sp Attack: </string>
    <string name="spdefense">Sp Defense: </string>
    <string name="speed">Speed: </string>
</resources>
